k8s/apps/tools/metube/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metube
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metube
  namespace: metube
  labels:
    app.kubernetes.io/name: metube
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: metube
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metube
    spec:
      containers:
        - name: metube
          image: ghcr.io/alexta69/metube:2026.04.21@sha256:8f0f1bf7b47b001ba596f18a61c0c6da1bba1e8270e9bf68f549ac0fcfeb4b61
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: metube-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: metube
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: metube
  ports:
    - port: 80
      targetPort: 8081
      name: http
