k8s/apps/tools/metube/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metube
  namespace: metube
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "MeTube"
    gethomepage.dev/description: "YouTube downloader"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "metube.png"
    gethomepage.dev/href: "https://metube.item.fyi"
    gethomepage.dev/siteMonitor: "https://metube.item.fyi"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=metube"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`metube.item.fyi`)
      services:
        - name: metube
          port: 80
  tls: {}
